--- a/index.html
+++ b/index.html
@@ -5,19 +5,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>About</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <ul>
-    <li><a href="index.html">About</a></li>
-    <li><a href="elae.html">Early life and education</a></li>
-    <li><a href="lit_work.html">Literary work</a></li>
-    <li><a href="pupin_coils.html">Pupin coils</a></li>
-  </ul>
-  <hr>
+  <!-- Logo -->
+  <header>LOGO</header>
+  <!-- Navbar -->  
+  <nav class="navbar">
+    <ul>
+      <li><a href="index.html">About</a></li>
+      <li><a href="elae.html">Early life and education</a></li>
+      <li><a href="lit_work.html">Literary work</a></li>
+      <li><a href="pupin_coils.html">Pupin coils</a></li>
+    </ul>
+  </nav>
+  <!-- Section Article -->
+  <section class="page-content">
   <h1>Mihajlo Idvorski Pupin</h1>
-  <img src="pics/pupin.jpg" alt="pupin">
+  <img src="pics/pupin.jpg" alt="pupin" id="pupin1">
   <p><strong>Mihajlo Idvorski Pupin, Ph.D., LL.D.</strong> <em>(Serbian Cyrillic: Михајло Идворски Пупин; 9 October 1858 – 12 March 1935)</em>, also known as Michael I. Pupin, was a Serbian American physicist and physical chemist. </p>
   <p> Pupin is best known for his numerous patents, including a means of greatly extending the range of long-distance telephone communication by placing loading coils (of wire) at predetermined intervals along the transmitting wire (known as "pupinization"). </p>
   <p> Pupin was a founding member of National Advisory Committee for Aeronautics (NACA) on March 3, 1915, which later became NASA.</p>
+  </section>
+  <!-- Footer -->
+  <footer>Copyrights 2020.</footer>
 </body>
 </html>
